# KosSim

./: .env  .env.example  .gitignore  Makefile  README.html  README.md  docker-compose.override.yml  docker-compose.yml  pytest.ini  requirements-dev.txt  service-prompts.html
ecsc/ecsc2025-ad-wiki/: .license-select.json  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
ecsc/ecsc2025-ad-wiki/docs/: api.md  cheatsheet.md  conduct.md  contact.md  game.md  index.md  network.md  platform.md  scoring.md  team.md
ecsc/ecsc2025-ad-wiki/docs/assets/: style.css
ecsc/ecsc2025-ad-wiki/overrides/partials/: header.html  nav.html
ecsc/ecsc2025-ctfroute/: Makefile  README.md  pyproject.toml
ecsc/ecsc2025-ctfroute/ctfroute/: LICENSE  README.md  pyproject.toml
ecsc/ecsc2025-ctfroute/ctfroute-k8s/: crds.yaml  pyproject.toml
ecsc/ecsc2025-ctfroute/ctfroute-k8s/examples/: pre-game-gate.yaml
ecsc/ecsc2025-ctfroute/ctfroute/ctfroute/: __main__.py  debug.py  defs.py  exceptions.py  utils.py
ecsc/ecsc2025-ctfroute/ctfroute/tests/: conftest.py  router1_ctfroute.yml  test_adapter.py  test_basic.py  test_defs.py  test_gate_rendering.py  test_gatekeeper.py  test_gates.py  test_integration.py  test_iperf.py  test_netfilter_drivers.py  test_preflight.py  test_state.py  test_yaml_config.py
ecsc/ecsc2025-ctfroute/ctftest/: Makefile  pyproject.toml
ecsc/ecsc2025-ctfroute/ctftest/ctftest/: sniffer.py
ecsc/ecsc2025-ctfroute/docker/: Dockerfile  compose.yml  ctfroute.yml  debug.compose.override.yml  kubernetes-debug.compose.override.yml  kubernetes.ctfroute.yml
ecsc/ecsc2025-ctfroute/docker/wg-confs/: client1.conf  client2.conf  client3.conf  client4.conf  player.conf
ecsc/ecsc2025-ctfroute/docs/: Architecture.md  DataModel.md  Gates.md  InfrequentlyAskedQuestions.md  Nftables.md  PublishingToPyPI.md  PyCharmDebugging.md
ecsc/ecsc2025-ctfroute/k8s/: 00-configmaps.yml  00-crds.yaml  00-rbac.yaml  01-api-server.yml  02-routers.yml  03-vulnboxes.yml
ecsc/ecsc2025-gameserver/: .env.example  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  compose.yaml  config.sample.yaml  db.sqlite3  production-override.yaml  pyproject.toml  services.json  services.sql  teams.sql
ecsc/ecsc2025-gameserver/checker_runner/: celery_cmd.py  checker_execution.py  runner.py  user_agents.py
ecsc/ecsc2025-gameserver/checker_runner/runners/: saarctf.py
ecsc/ecsc2025-gameserver/ci/: test-demo-checker.py
ecsc/ecsc2025-gameserver/controlserver/: app.py  db_filesystem.py  dispatcher.py  events.py  events_impl.py  flag_id_file.py  logger.py  master_timer.py  models.py  patch_utils.py  service_mgr.py  timer.py  vpncontrol.py
ecsc/ecsc2025-gameserver/controlserver/endpoints/: checker_results.py  flags.py  log_messages.py  pages.py  patches.py  services.py  teams.py
ecsc/ecsc2025-gameserver/controlserver/scoring/: filtered_scoring.py  scoreboard.py  scoreboard_process.py  scoring.py
ecsc/ecsc2025-gameserver/controlserver/templates/: base.html
ecsc/ecsc2025-gameserver/controlserver/utils/: ctfroute.py  import_factory.py
ecsc/ecsc2025-gameserver/flag-submission-server/benchmark/: benchmark_newflags.cpp
ecsc/ecsc2025-gameserver/flag-submission-server/scripts/: generate_flag.py
ecsc/ecsc2025-gameserver/flag-submission-server/src/: config.cpp  flagchecker.h
ecsc/ecsc2025-gameserver/migrations/: env.py
ecsc/ecsc2025-gameserver/migrations/versions/: 057792e3ba77_.py  0e400cc111e2_.py  10a5ee20d0ef_.py  1418f098d06f_.py  1eeeeb5988b0_.py  251d7bd3641c_.py  28250d12516f_.py  2bcc2a3e63ea_.py  2f793eb41f0e_.py  4225a3d6edbd_add_timezone_info.py  4a67c6f412ac_.py  50067ab5c83d_enochecker.py  (+26 more)
ecsc/ecsc2025-gameserver/saarctf_commons/: config.py  db_utils.py  debug_sql_timing.py  logging_utils.py  metric_utils.py  redis.py
ecsc/ecsc2025-gameserver/sample_files/: demo_exploit.py  demo_traffic.py  randomflags.py  simple_exploit_runner.py  submit-random-flags.py
ecsc/ecsc2025-gameserver/scoreboard/: angular.json  package-lock.json
ecsc/ecsc2025-gameserver/scripts/: cloud_status_simple.py  docker-load-table.sh  docker-save-table.sh  docker_sync_teams.sh  export_ctftime_scoreboard.py  import_services.py  loadtest_service.py  manual_dispatch-collect.py  manual_dispatch.py  patch_publish.py  reconstruct_redis.py  recreate_firstblood.py  recreate_ranking.py  recreate_scoreboard.py  reset_ctf.py  reset_ctf_to_round.py  service_setup_scripts.py  sync_teams_http.py  test_dispatchspeed.py  worker_pool_increase.py  worker_pool_status.py
ecsc/ecsc2025-gameserver/tests/: __init__.py  bench_scoring.py  test_config.py  test_dispatcher.py  test_gamelib.py  test_scoring.py  test_scripts.py  test_vpnboard.py
ecsc/ecsc2025-gameserver/vpn/: build-openvpn-config-cloud.py  build-openvpn-config-oneperteam.py  build-openvpn-orga-multi.py  build-wireguard-orga-multi.py  manage-hetzner-firewall.py  manage-iptables.py  manage-trafficstats.py  on-cloud-connect.py  on-cloud-disconnect.py  on-cloud-down.py  on-connect.py  on-disconnect.py  reset-connection-status.py  vpnctl.py  vpnlib.py
ecsc/ecsc2025-gameserver/vpnboard/: __init__.py  records.py  vpn_board.py  vpn_status_daemon.py  vpnchecks.py  wg_status.py
ecsc/ecsc2025-platform/: Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  secrets.tfvars.example  vite.config.ts
ecsc/ecsc2025-platform/chart/: Caddyfile  values.yaml  vm_templates.json
ecsc/ecsc2025-platform/docker/: .env.example  Caddyfile  Dockerfile  compose.yml  dev.compose.override.yml
ecsc/ecsc2025-platform/mainpage/: admin.py  apps.py  context_processors.py  deployment_settings.py  forms.py  log_filters.py  models.py  network_lib.py  provider.py  settings.py  urls.py  utils.py  vm_templates.json  vmhosting.py  vmtemplate.py  wsgi.py
ecsc/ecsc2025-platform/packer/: Readme.md
ecsc/ecsc2025-platform/scripts/: backup-current-iteration.sh  create-psql-database.sh  update-saarctf-config.sh
ecsc/ecsc2025-platform/tofu/: README.md  main.tf  variables.tf
ecsc/ecsc2025-vulnhost/: .editorconfig  Makefile  README.md  pyproject.toml
ecsc/ecsc2025-vulnhost/docs/: format.json
(+1307 files in other folders)
