[project]
name = "ecsc2025-gameserver"
version = "0.1.0"
description = "The gameserver used for ecsc2025 (based on saarCTF gameserver with integrations for the ENOWARS Checker API v2)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.7",
    "alembic>=1.15.2",
    "celery[amqp,redis]>=5.3,<6",
    "cryptography>=43.0.3",
    "ctfroute-k8s>=0.4.0",
    "ecs-logging>=2.2.0",
    "enochecker-core==0.13.0",
    "filelock>=3.18.0",
    "flask>=3.1.0",
    "flask-admin>=1.6.1",
    "flower>=2,<3",
    "hcloud>=1.16.0",
    "htmlmin2>=0.1.13",
    "jsons>=1.6.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pyroute2>=0.9.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "redis>=5.3.0",
    "requests>=2.32.3",
    "setproctitle>=1.3.6",
    "sqlalchemy[mypy]>=2,<3",
    "typing-extensions>=4.13.2",
    "ujson>=5.10.0",
]


[dependency-groups]
dev = [
    "mypy>=1.5.1",
    "pytest>=8.3.5",
    "types-pyyaml>=6.0.12.20250402",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20250328",
    "types-selenium>=3.141.9",
    "types-setuptools>=80.3.0.20250505",
    "types-six>=1.17.0.20250403",
    "types-ujson>=5.10.0.20250326",
]
run = [
    "gunicorn>=23.0.0",
]
script = [
    "beautifulsoup4>=4.13.4",
    "celery[ampq,redis]>=5.3,<6",
    "filelock>=3.18.0",
    "flask>=3.1.0",
    "fuckpy3>=1.0",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "pwntools>=4.14.1",
    "pycryptodome>=3.22.0",
    "pytz>=2025.2",
    "redis>=5.3.0",
    "requests>=2.32.3",
]

[tool.mypy]
exclude = "gamelib/ci"
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"

packages = [
  "controlserver",
  "scripts",
  "checker_runner",
  "gamelib",
  "vpn",
  "vpnboard",
]

[[tool.mypy.overrides]]
module = [
  "celery",
  "celery.*",
  "kombu.common",
  "billiard.exceptions",
  "flask_apscheduler",
  "flask_migrate",
  "flask_admin",
  "flask_admin.contrib",
  "jinja2",
  "kombu",
  "htmlmin",
  "filelock",
  "PIL",
  "psycopg2",
  "psycopg2.*",
  "sample_files.*",
  "pysigset",
  "pwnlib",
  "pwnlib.exception",
  "pwnlib.tubes",
  "influxdb",
  "markupsafe",
  "werkzeug.utils",
  "hcloud",
  "hcloud.actions.client",
  "hcloud.firewalls.domain",
  "amqp",
  "pyroute2",
  "pyroute2.netlink.exceptions",
  "pytest",
  "jsons",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.uv.workspace]
members = [
    "enochecker-core",
]

[tool.uv.sources]
enochecker-core = { workspace = true }
