[project]
name = "ctf-landing"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
authors = [
    { name = "saarsec", email = "saarsec@saarsec.rocks" },
    { name = "attacking-lab", email = "contact@attacking-lab.com" }
]
readme = "README.md"
dependencies = [
    "gunicorn>=23.0.0,<24",
    "psycopg2-binary>=2.9.10,<3",
    "ecs-logging>=2.2.0,<3",
    "django-guid>=3.5.0,<4",
    "django~=5.1",
    "python-dateutil>=2.9.0.post0,<3",
    "Markdown>=3.7,<4",
    "django-crispy-forms>=2.3,<3",
    "django-hcaptcha>=0.2.0,<1",
    "crispy-bootstrap4>=2024.10,<2025",
    "django-constance>=4.1.3,<5",
    "djangorestframework>=3.15.2,<4",
    "django-q2>=1.7.4,<2",
    "redis>=5.2.0,<6",
    "blessed>=1.20.0,<2",
    "django-loginas>=0.3.11,<1",
    "django-allauth>=65.10.0,<66",
    "cryptography>=45.0.7",
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3,<1",
    "types-python-dateutil>=2.9.0.20241003,<3",
    "types-Markdown==3.7.0.20240822",
    "faker>=33.0.0,<34",
    "djangorestframework-stubs"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mainpage.settings"

[[tool.mypy.overrides]]
module = ["constance", "markdown", "django-hcaptcha", "hcaptcha.fields", "django_q.tasks", "loginas.utils"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["**/migrations/**.py"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"mainpage/*settings.py" = [
    "F403", # Wildcard import
    "F405" # Wildcard imports
]

[tool.ruff.lint]
extend-select = [
    "F401", # Unused import
    "I", # Imports
    "ASYNC",
    "D", # Docs, google style (see below)
    "D213", # Multiline docstrings start with newline
    "RUF022", # Sort __all__
]
ignore = [
    "D100", # Docstrings on every module
    "D101", # Docstring on every class
    "D102", # Docstring on every method
    "D103", # Missing docstring for functions
    "D104", # Docstring on every package
    "D105", # Docstring on every dunder
    "D106", # Docstring on every nested class
    "D107", # Docstring on every __init__
    "D212", # We use D213 instead
    "D203", # Incompatible with D211
]