[project]
name = "ctfroute"
version = "0.0.1"
description = ""
authors = [{ name = "no.shoes", email = "no.shoes@posteo.net" }]
requires-python = "~=3.13.0"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.10.6,<3",
    "pyyaml>=6.0.2,<7",
    "pyroute2>=0.8.1,<0.9",
    "aiostream>=0.6.4,<0.7",
    "scapy>=2.6.1",
    "aiohttp>=3.12.13",
    "prometheus-client>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctfroute"]

[project.scripts]
ctfroute = "ctfroute.__main__:cli_main"
ctfroute-wg = "ctfroute.scripts.wireguard:cli_main"
ctfroute-confgen = "ctfroute.scripts.confgen:cli_main"
