[project]
name = "ctftest"
version = "0.1.0"
description = ""
authors = [{ name = "no.shoes", email = "no.shoes@posteo.net" }]
requires-python = "~=3.13.0"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "ctfroute",
    "pytest>=8.3.4,<9",
    "scapy>=2.6.1,<3",
    "grpcio>=1.70.0,<2",
    "grpcio-tools>=1.70.0,<2",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctftest"]

[project.scripts]
ctftest-agent = "ctftest.agent.server:cli_main"
