[project]
name = "elastic-configurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niklas Beierl", email = "22919961+NiklasBeierl@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
