[package]
name = "website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
interface = { version = "0.1.0", path = "../interface" }
serde = "1.0.219"
serde_json = { version = "1.0.141", features = ["raw_value"] }
hex = "0.4.3"
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["v4"] }
getrandom = "0.3.3"
base64 = "0.22.1"
regex = "1.11.1"
lazy_static = "1.5.0"
chrono = "0.4.41"

[dependencies.rocket]
version = "0.5.1"
features = ["secrets", "json"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]
