[project]
name = "checker"
version = "0.1.0"
requires-python = "==3.13"
dependencies = [
    "enochecker3",
    "httpx>=0.28.1",
    "paramiko==3.5.1",
    "pycryptodome==3.21.0",
]

[tool.uv.sources]
enochecker3 = { git = "https://github.com/attacking-lab/enochecker3", rev = "v0.13.4" }
enochecker_core = { git = "https://github.com/attacking-lab/enochecker_core", rev = "v0.10.0" }
