[package]
name = "ledgerforge"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
subtle = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
once_cell = "1.19"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
