[package]
name = "vaultgrid-crypt"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cipher = "0.4"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
