[package]
name = "firewalld"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
atoi_simd = "0.16.0"
bytes = "1.10.1"
chumsky = "0.11.1"
clap = { version = "4.5.36", features = ["derive"] }
evmap = "10.0.2"
futures = "0.3.31"
hex = "0.4.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
ipnet = "2.11.0"
libc = "0.2.171"
moka = { version = "0.12.10", features = ["future"] }
nix = { version = "0.30.1", features = ["net", "mman", "poll", "feature", "ioctl", "user"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "json"] }
rtnetlink = "0.18.1"
rustls = "0.23.26"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uzers = "0.12.1"

[features]
# Dump raw packet data into the console. Good for debugging actual issues, less good for production.
packet-trace = []
# Verbosely trace packet's flow through the filter chains. Like packet-trace, this will be very spammy and introduce additional latency.
filter-trace = []

[profile.profiling]
inherits = "release"
debug = true
