[project]
name = "frontend"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "flask>=3.1.2",
    "flask-pydantic>=0.13.2",
    "gunicorn>=23.0.0",
    "msgspec>=0.19.0",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pysmi>=1.6.2",
    "pysnmp>=7.1.21",
]
