[project]
name = "nanofleet-checker"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "enochecker3",
    "httpx>=0.27",
    "gunicorn>=22.0",
    "uvicorn>=0.30",
]

[tool.uv.sources]
enochecker3 = { git = "https://github.com/attacking-lab/enochecker3", rev = "v0.13.4" }
enochecker-core = { git = "https://github.com/attacking-lab/enochecker-core", rev = "v0.13.0" }
